Refactor: 역순으로 반환하도록 변경