@@ -2,6 +2,7 @@ package shop.kkeujeok.kkeujeokbackend.challenge.application;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -199,15 +200,17 @@ public class ChallengeService {
     @Transactional(readOnly = true)
     public ChallengeListResDto findChallengesByCategoryAndKeyword(ChallengeSearchReqDto challengeSearchReqDto,
                                                                   Pageable pageable) {
-        Page<Challenge> challenges = challengeRepository.findChallengesByCategoryAndKeyword(challengeSearchReqDto,
-                pageable);
+        Page<Challenge> challenges = challengeRepository.findChallengesByCategoryAndKeyword(challengeSearchReqDto, pageable);
 
         List<ChallengeInfoResDto> challengeInfoResDtoList = challenges.stream()
                 .map(ChallengeInfoResDto::from)
-                .toList();
+                .collect(Collectors.toList());
+
+        Collections.reverse(challengeInfoResDtoList); // 리스트를 역순으로 변경
 
         return ChallengeListResDto.of(challengeInfoResDtoList, PageInfoResDto.from(challenges));
     }
+
 
     @Transactional
     public void withdrawFromChallenge(String email, Long challengeId) {
